Specify path to app.yaml

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,4 +20,4 @@ steps:
     # Use cbif condition: only run these steps in one of these projects.
     - PROJECT_IN=mlab-sandbox,mlab-staging
   args:
-    - gcloud --project $PROJECT_ID app deploy --promote app.yaml
+    - gcloud --project $PROJECT_ID app deploy --promote cmd/locate/app.yaml
