--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -9,15 +9,15 @@ steps:
 # Run unit tests for environment.
 - name: gcr.io/$PROJECT_ID/golang-cbif
   args:
-   - go get -v -t ./...
-   - go vet ./...
-   - go test ./... -race
-   - go test -v ./...
+  - go get -v -t ./...
+  - go vet ./...
+  - go test ./... -race
+  - go test -v ./...
 
 # Perform deployment in sandbox & staging & mlab-ns.
 - name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif
   env:
-    # Use cbif condition: only run these steps in one of these projects.
-    - PROJECT_IN=mlab-sandbox,mlab-staging
+  # Use cbif condition: only run these steps in one of these projects.
+  - PROJECT_IN=mlab-sandbox,mlab-staging
   args:
-    - gcloud --project $PROJECT_ID app deploy --promote cmd/locate/app.yaml
+  - gcloud --project $PROJECT_ID app deploy --promote app.yaml
