--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -9,6 +9,7 @@ steps:
 # Run unit tests for environment.
 - name: gcr.io/$PROJECT_ID/golang-cbif
   args:
+  - go version
   - go get -v -t ./...
   - go vet ./...
   - go test ./... -race
