--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -10,7 +10,7 @@ steps:
 - name: gcr.io/$PROJECT_ID/golang-cbif
   args:
   - go version
-  - go get -v -t ./...
+#  - go get -v -t ./...
   - go vet ./...
   - go test ./... -race
   - go test -v ./...
