--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -11,9 +11,9 @@ steps:
   args:
   - go version
 #  - go get -v -t ./...
-  - go vet ./...
-  - go test ./... -race
-  - go test -v ./...
+#  - go vet ./...
+#  - go test ./... -race
+#  - go test -v ./...
 
 # Perform deployment in sandbox & staging & mlab-ns.
 - name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif
