--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -10,10 +10,10 @@ steps:
 - name: gcr.io/$PROJECT_ID/golang-cbif
   args:
   - go version
-#  - go get -v -t ./...
-#  - go vet ./...
-#  - go test ./... -race
-#  - go test -v ./...
+  - go get -v -t ./...
+  - go vet ./...
+  - go test ./... -race
+  - go test -v ./...
 
 # Perform deployment in sandbox & staging & mlab-ns.
 - name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif
