--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -19,7 +19,7 @@ steps:
 - name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif
   env:
   # Use cbif condition: only run these steps in one of these projects.
-  - PROJECT_IN=mlab-sandbox,mlab-staging
+  - PROJECT_IN=mlab-sandbox,mlab-staging,mlab-ns
   args:
   - cp app.yaml.$PROJECT_ID app.yaml
   - gcloud --project $PROJECT_ID app deploy --promote app.yaml
