--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -10,6 +10,7 @@ steps:
 - name: gcr.io/$PROJECT_ID/golang-cbif
   env:
   - GO111MODULE=off
+  - GOPRIVATE=github.com/m-lab/go/*
   args:
   - go version
   - go get -v -t ./...
