Add v1 and v2 machine names to access tokens (#14)
* Use host.Parse to construct correct machine names
* Allow changing the legacy mlab-ns server
* Guarantee that Nearest returns v2 hostnames
* Create access tokens with v1 and v2 hostnames
* Pass platform project to LegacyLocator

--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -8,6 +8,8 @@ options:
 steps:
 # Run unit tests for environment.
 - name: gcr.io/$PROJECT_ID/golang-cbif
+  env:
+  - GONOPROXY=github.com/m-lab/go/*
   args:
   - go version
   - go get -v -t ./...
