--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -23,5 +23,14 @@ steps:
   # Use cbif condition: only run these steps in one of these projects.
   - PROJECT_IN=mlab-sandbox,mlab-staging,mlab-ns
   args:
-  - cp app.yaml.$PROJECT_ID app.yaml
+  - cp cloudbuild/app-platform.yaml.$PROJECT_ID app.yaml
+  - gcloud --project $PROJECT_ID app deploy --promote app.yaml
+
+# Perform deployment in sandbox & staging & mlab-ns.
+- name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif
+  env:
+  # Use cbif condition: only run these steps in one of these projects.
+  - PROJECT_IN=mlab-sandbox,mlab-staging,mlab-ns
+  args:
+  - cp cloudbuild/app.yaml.$PROJECT_ID app.yaml
   - gcloud --project $PROJECT_ID app deploy --promote app.yaml
