--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -17,7 +17,8 @@ steps:
   - go test ./... -race
   - go test -v ./...
 
-# Perform deployment in sandbox & staging & mlab-ns.
+# Deployment of platform specific APIs in sandbox & staging & mlab-ns.
+# NOTE: these services are not meant for the public, e.g. /v2/platform/*
 - name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif
   env:
   # Use cbif condition: only run these steps in one of these projects.
@@ -26,7 +27,7 @@ steps:
   - cp cloudbuild/app-platform.yaml.$PROJECT_ID app.yaml
   - gcloud --project $PROJECT_ID app deploy --promote app.yaml
 
-# Perform deployment in sandbox & staging & mlab-ns.
+# Deployment of public APIs in sandbox & staging & mlab-ns. e.g. /v2/nearest/*
 - name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif
   env:
   # Use cbif condition: only run these steps in one of these projects.
