--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -1,4 +1,4 @@
-timeout: 1800s
+timeout: 3600s
 
 options:
   env:
@@ -17,11 +17,21 @@ steps:
   - go test ./... -race
   - go test -v ./...
 
-# Perform deployment in sandbox & staging & mlab-ns.
+# Deployment of platform specific APIs in sandbox & staging & mlab-ns.
+# NOTE: these services are not meant for the public, e.g. /v2/platform/*
 - name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif
   env:
   # Use cbif condition: only run these steps in one of these projects.
   - PROJECT_IN=mlab-sandbox,mlab-staging,mlab-ns
   args:
-  - cp app.yaml.$PROJECT_ID app.yaml
+  - cp cloudbuild/app-platform.yaml.$PROJECT_ID app.yaml
+  - gcloud --project $PROJECT_ID app deploy --promote app.yaml
+
+# Deployment of public APIs in sandbox & staging & mlab-ns. e.g. /v2/nearest/*
+- name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif
+  env:
+  # Use cbif condition: only run these steps in one of these projects.
+  - PROJECT_IN=mlab-sandbox,mlab-staging,mlab-ns
+  args:
+  - cp cloudbuild/app.yaml.$PROJECT_ID app.yaml
   - gcloud --project $PROJECT_ID app deploy --promote app.yaml
