--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -19,13 +19,13 @@ steps:
 
 # Deployment of platform specific APIs in sandbox & staging & mlab-ns.
 # NOTE: these services are not meant for the public, e.g. /v2/platform/*
-- name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif
-  env:
-  # Use cbif condition: only run these steps in one of these projects.
-  - PROJECT_IN=mlab-sandbox,mlab-staging,mlab-ns
-  args:
-  - cp cloudbuild/app-platform.yaml.$PROJECT_ID app.yaml
-  - gcloud --project $PROJECT_ID app deploy --promote app.yaml
+#- name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif
+#  env:
+#  # Use cbif condition: only run these steps in one of these projects.
+#  - PROJECT_IN=mlab-sandbox,mlab-staging,mlab-ns
+#  args:
+#  - cp cloudbuild/app-platform.yaml.$PROJECT_ID app.yaml
+#  - gcloud --project $PROJECT_ID app deploy --promote app.yaml
 
 # Deployment of public APIs in sandbox & staging & mlab-ns. e.g. /v2/nearest/*
 - name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif
@@ -36,5 +36,5 @@ steps:
   - cp cloudbuild/app.yaml.$PROJECT_ID app.yaml
   - gcloud --project $PROJECT_ID app deploy --promote app.yaml
   # After deploying the new service, deploy the openapi spec.
-  - sed -i -e "s/{{PROJECT}}/$PROJECT_ID/" openapi.yaml
-  - gcloud endpoints services deploy openapi.yaml
+#  - sed -i -e "s/{{PROJECT}}/$PROJECT_ID/" openapi.yaml
+#  - gcloud endpoints services deploy openapi.yaml
