Configures Locate to use the new secrets package
This commit configures the Locate Service to use the new secrets
package, which fetches the JWT signer and verify keys from the Google
Secret Manager at runtime.

Additionally, this PR removes all of the old project-specific GAE config
files in favor of templates for both the locate and locate-platform
services.

--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -24,9 +24,14 @@ steps:
   # Use cbif condition: only run these steps in one of these projects.
   - PROJECT_IN=mlab-sandbox,mlab-staging,mlab-ns
   args:
-  - cp cloudbuild/app-platform.yaml.$PROJECT_ID app.yaml
+  - cp cloudbuild/app-platform.yaml.template app-platform.yaml
+  - >
+    sed -i
+    -e 's/{{PROJECT}}/$PROJECT_ID/g'
+    -e 's/{{PLATFORM_PROJECT}}/$_PLATFORM_PROJECT/'
+    app-platform.yaml
   - gcloud config set app/cloud_build_timeout 900
-  - gcloud --project $PROJECT_ID app deploy --promote app.yaml
+  - gcloud --project $PROJECT_ID app deploy --promote app-platform.yaml
 
 # Deployment of public APIs in sandbox & staging & mlab-ns. e.g. /v2/nearest/*
 - name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif
@@ -34,8 +39,13 @@ steps:
   # Use cbif condition: only run these steps in one of these projects.
   - PROJECT_IN=mlab-sandbox,mlab-staging,mlab-ns
   args:
-  - cp cloudbuild/app.yaml.$PROJECT_ID app.yaml
+  - cp cloudbuild/app.yaml.template app.yaml
+  - >
+    sed -i
+    -e 's/{{PROJECT}}/$PROJECT_ID/g'
+    -e 's/{{PLATFORM_PROJECT}}/$_PLATFORM_PROJECT/'
+    app.yaml
   - gcloud --project $PROJECT_ID app deploy --promote app.yaml
+  - sed -i -e 's/{{PROJECT}}/$PROJECT_ID/' openapi.yaml
   # After deploying the new service, deploy the openapi spec.
-  - sed -i -e "s/{{PROJECT}}/$PROJECT_ID/" openapi.yaml
   - gcloud endpoints services deploy openapi.yaml
