--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,14 @@ language: go
 go:
 - 1.16
 
+before_install:
+- apt reinstall --yes ca-certificates
+
 install:
 - go get -v -t ./...
 - go get github.com/mattn/goveralls
 
 script:
-- apt reinstall --yes ca-certificates
 - go vet ./...
 - go test ./... -cover=1 -coverprofile=_c.cov
 - go test ./... -race
