--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -33,19 +33,19 @@ steps:
   - gcloud config set app/cloud_build_timeout 900
   - gcloud --project $PROJECT_ID app deploy --promote app-platform.yaml
 
-# Deployment of public APIs in sandbox & staging & mlab-ns. e.g. /v2/nearest/*
-- name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif
-  env:
-  # Use cbif condition: only run these steps in one of these projects.
-  - PROJECT_IN=mlab-sandbox,mlab-staging,mlab-ns
-  args:
-  - cp cloudbuild/app.yaml.template app.yaml
-  - >
-    sed -i
-    -e 's/{{PROJECT}}/$PROJECT_ID/g'
-    -e 's/{{PLATFORM_PROJECT}}/$_PLATFORM_PROJECT/'
-    app.yaml
-  - gcloud --project $PROJECT_ID app deploy --promote app.yaml
-  # After deploying the new service, deploy the openapi spec.
-  - sed -i -e 's/{{PROJECT}}/$PROJECT_ID/' openapi.yaml
-  - gcloud endpoints services deploy openapi.yaml
+# # Deployment of public APIs in sandbox & staging & mlab-ns. e.g. /v2/nearest/*
+# - name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif
+#   env:
+#   # Use cbif condition: only run these steps in one of these projects.
+#   - PROJECT_IN=mlab-sandbox,mlab-staging,mlab-ns
+#   args:
+#   - cp cloudbuild/app.yaml.template app.yaml
+#   - >
+#     sed -i
+#     -e 's/{{PROJECT}}/$PROJECT_ID/g'
+#     -e 's/{{PLATFORM_PROJECT}}/$_PLATFORM_PROJECT/'
+#     app.yaml
+#   - gcloud --project $PROJECT_ID app deploy --promote app.yaml
+#   # After deploying the new service, deploy the openapi spec.
+#   - sed -i -e 's/{{PROJECT}}/$PROJECT_ID/' openapi.yaml
+#   - gcloud endpoints services deploy openapi.yaml
