--- a/cloudbuild/app-platform.yaml.template
+++ b/cloudbuild/app-platform.yaml.template
@@ -4,7 +4,7 @@ service: locate-platform
 
 endpoints_api_service:
   # NOTE: "name" MUST match the "host" name from openapi-platform.yaml
-  name: locate-dot-{{PROJECT}}.appspot.com
+  name: locate-platform-dot-{{PROJECT}}.appspot.com
   rollout_strategy: managed
 
 resources:
