Openapi configuration for heartbeat (#65)
* Openapi configuration for heartbeat

* Fix path

* Fix indentation

* Add responses

* Fix path

* Remove extra slash

* Indentation

* Revert file

* Test

* indentation

* Test no public API

* test new platform endpoint

* Add cloudbuild step

* Add error response

* Typo

* Same as existing api key endpoint

* operationID

* Change schemes back

* Remove /platform

* Add openapi-platform.yaml

* Fix syntax

* Delete extra period

* Fix comment

* Fix file name

* New host for platform API

* Consolidate paths under one service

* Add operationId

* Websocket schemes

* Replace heartbeat/ with heartbeat

* Group with tags

* Fix tag descriptions

* Revert cloudbuild

--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -17,23 +17,7 @@ steps:
   - go test ./... -race
   - go test -v ./...
 
-# Deployment of platform specific APIs in sandbox & staging & mlab-ns.
-# NOTE: these services are not meant for the public, e.g. /v2/platform/*
-- name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif
-  env:
-  # Use cbif condition: only run these steps in one of these projects.
-  - PROJECT_IN=mlab-sandbox,mlab-staging,mlab-ns
-  args:
-  - cp cloudbuild/app-platform.yaml.template app-platform.yaml
-  - >
-    sed -i
-    -e 's/{{PROJECT}}/$PROJECT_ID/g'
-    -e 's/{{PLATFORM_PROJECT}}/$_PLATFORM_PROJECT/'
-    app-platform.yaml
-  - gcloud config set app/cloud_build_timeout 900
-  - gcloud --project $PROJECT_ID app deploy --promote app-platform.yaml
-
-# Deployment of public APIs in sandbox & staging & mlab-ns. e.g. /v2/nearest/*
+# Deployment of APIs in sandbox & staging & mlab-ns.
 - name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif
   env:
   # Use cbif condition: only run these steps in one of these projects.
