Use locate network

--- a/cloudbuild/app.yaml.template
+++ b/cloudbuild/app.yaml.template
@@ -12,8 +12,7 @@ resources:
   memory_gb: 8
 
 network:
-  name: default
-  subnetwork_name: default
+  name: locate
 
 automatic_scaling:
   max_num_instances: 20
