Explicit network name in app.yaml (#67)
* Explicit, locate network

--- a/cloudbuild/app.yaml.template
+++ b/cloudbuild/app.yaml.template
@@ -11,6 +11,9 @@ resources:
   cpu: 2
   memory_gb: 8
 
+network:
+  name: locate
+
 automatic_scaling:
   max_num_instances: 20
   # Anecdotally, it seems to take roughly 5m for an instance to initialize
