--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -7,7 +7,7 @@ options:
 
 steps:
 # Run unit tests for environment.
-- name: gcr.io/$PROJECT_ID/golang-cbif
+- name: gcr.io/$PROJECT_ID/golang-cbif:1.18
   env:
   - GONOPROXY=github.com/m-lab/go/*
   args:
@@ -18,7 +18,7 @@ steps:
   - go test -v ./...
 
 # Deployment of APIs in sandbox & staging & mlab-ns.
-- name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif
+- name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif:1.18
   env:
   # Use cbif condition: only run these steps in one of these projects.
   - PROJECT_IN=mlab-sandbox,mlab-staging,mlab-ns
