Implement Redis Client  (#71)
* Implement Redis Client

* Split api changes

* Add api changes back and remove local dev

* Nits

* Create new memorystore package

* Undo spacing changes

* Fix travis build

* Make value of type redis.Scanner

--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -7,7 +7,7 @@ options:
 
 steps:
 # Run unit tests for environment.
-- name: gcr.io/$PROJECT_ID/golang-cbif
+- name: gcr.io/$PROJECT_ID/golang-cbif:1.18
   env:
   - GONOPROXY=github.com/m-lab/go/*
   args:
@@ -18,7 +18,7 @@ steps:
   - go test -v ./...
 
 # Deployment of APIs in sandbox & staging & mlab-ns.
-- name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif
+- name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif:1.18
   env:
   # Use cbif condition: only run these steps in one of these projects.
   - PROJECT_IN=mlab-sandbox,mlab-staging,mlab-ns
@@ -28,6 +28,7 @@ steps:
     sed -i
     -e 's/{{PROJECT}}/$PROJECT_ID/g'
     -e 's/{{PLATFORM_PROJECT}}/$_PLATFORM_PROJECT/'
+    -e 's/{{REDIS_ADDRESS}}/$_REDIS_ADDRESS/'
     app.yaml
   - gcloud --project $PROJECT_ID app deploy --promote app.yaml
   # After deploying the new service, deploy the openapi spec.
