--- a/cloudbuild/app.yaml.template
+++ b/cloudbuild/app.yaml.template
@@ -13,6 +13,8 @@ resources:
 
 network:
   name: locate
+  forwarded_ports:
+    - 9090/tcp
 
 automatic_scaling:
   max_num_instances: 20
@@ -26,3 +28,4 @@ env_variables:
   LOCATOR_MAXMIND: true
   MAXMIND_URL: gs://downloader-{{PLATFORM_PROJECT}}/Maxmind/current/GeoLite2-City.tar.gz
   REDIS_ADDRESS: {{REDIS_ADDRESS}}
+  PROMETHEUSX_LISTEN_ADDRESS: ':9090' # Must match one of the forwarded_ports above.
