Add secret manager functionality to get Prometheus credentials (#85)
* Add secret manager functionality to get Prometheus credentials

* Address comments

* Newline

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,9 @@ services:
             - -platform-project=mlab-sandbox
             - -port=8080
             - -redis-address=redis:6379
+            - -prometheus-username-secret-name=./secrets/testdata/prom-auth-user
+            - -prometheus-password-secret-name=./secrets/testdata/prom-auth-pass
+            - -prometheus-url=https://prometheus-basicauth.mlab-sandbox.measurementlab.net/
             - -key-source=local
             - -signer-secret-name=./secrets/testdata/jwk_sig_EdDSA_test_20220415
             - -verify-secret-name=./secrets/testdata/jwk_sig_EdDSA_test_20220415.pub
