Make the promotion to the latest version conditional

--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -17,11 +17,29 @@ steps:
   - go test ./... -race
   - go test -v ./...
 
-# Deployment of APIs in sandbox & staging & mlab-ns.
+# Deployment of APIs in sandbox & staging.
 - name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif:1.18
   env:
   # Use cbif condition: only run these steps in one of these projects.
   - PROJECT_IN=mlab-sandbox,mlab-staging,mlab-ns
+  args:
+  - cp cloudbuild/app.yaml.template app.yaml
+  - >
+    sed -i
+    -e 's/{{PROJECT}}/$PROJECT_ID/g'
+    -e 's/{{PLATFORM_PROJECT}}/$_PLATFORM_PROJECT/'
+    -e 's/{{REDIS_ADDRESS}}/$_REDIS_ADDRESS/'
+    app.yaml
+  - gcloud --project $PROJECT_ID app deploy -promote app.yaml
+  # After deploying the new service, deploy the openapi spec.
+  - sed -i -e 's/{{PROJECT}}/$PROJECT_ID/' openapi.yaml
+  - gcloud endpoints services deploy openapi.yaml
+
+# Deployment of APIs in mlab-ns.
+- name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif:1.18
+  env:
+  # Use cbif condition: only run these steps in one of these projects.
+  - PROJECT_IN=mlab-ns
   args:
   - cp cloudbuild/app.yaml.template app.yaml
   - >
