--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -30,7 +30,7 @@ steps:
     -e 's/{{PLATFORM_PROJECT}}/$_PLATFORM_PROJECT/'
     -e 's/{{REDIS_ADDRESS}}/$_REDIS_ADDRESS/'
     app.yaml
-  - gcloud --project $PROJECT_ID app deploy -promote app.yaml
+  - gcloud --project $PROJECT_ID app deploy --promote app.yaml
   # After deploying the new service, deploy the openapi spec.
   - sed -i -e 's/{{PROJECT}}/$PROJECT_ID/' openapi.yaml
   - gcloud endpoints services deploy openapi.yaml
