--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -10,36 +10,20 @@ steps:
 - name: gcr.io/$PROJECT_ID/golang-cbif:1.18
   env:
   - GONOPROXY=github.com/m-lab/go/*
+  - CGO_ENABLED=0
   args:
   - go version
   - go get -v -t ./...
   - go vet ./...
   - go test ./... -race
   - go test -v ./...
+  - go build ./cmd/gradual-split
 
-# Deployment of APIs in sandbox & staging.
+# Deployment of APIs in sandbox, staging, & mlab-ns.
 - name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif:1.18
   env:
   # Use cbif condition: only run these steps in one of these projects.
-  - PROJECT_IN=mlab-sandbox,mlab-staging
-  args:
-  - cp cloudbuild/app.yaml.template app.yaml
-  - >
-    sed -i
-    -e 's/{{PROJECT}}/$PROJECT_ID/g'
-    -e 's/{{PLATFORM_PROJECT}}/$_PLATFORM_PROJECT/'
-    -e 's/{{REDIS_ADDRESS}}/$_REDIS_ADDRESS/'
-    app.yaml
-  - gcloud --project $PROJECT_ID app deploy --promote app.yaml
-  # After deploying the new service, deploy the openapi spec.
-  - sed -i -e 's/{{PROJECT}}/$PROJECT_ID/' openapi.yaml
-  - gcloud endpoints services deploy openapi.yaml
-
-# Deployment of APIs in mlab-ns.
-- name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif:1.18
-  env:
-  # Use cbif condition: only run these steps in one of these projects.
-  - PROJECT_IN=mlab-ns
+  - PROJECT_IN=mlab-sandbox,mlab-staging,mlab-ns
   args:
   - cp cloudbuild/app.yaml.template app.yaml
   - >
@@ -49,6 +33,25 @@ steps:
     -e 's/{{REDIS_ADDRESS}}/$_REDIS_ADDRESS/'
     app.yaml
   - gcloud --project $PROJECT_ID app deploy --no-promote app.yaml
+  - ./gradual-split -project $PROJECT_ID
   # After deploying the new service, deploy the openapi spec.
   - sed -i -e 's/{{PROJECT}}/$PROJECT_ID/' openapi.yaml
   - gcloud endpoints services deploy openapi.yaml
+
+# Deployment of APIs in mlab-ns.
+#- name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif:1.18
+#  env:
+#  # Use cbif condition: only run these steps in one of these projects.
+#  - PROJECT_IN=mlab-ns
+#  args:
+#  - cp cloudbuild/app.yaml.template app.yaml
+#  - >
+#    sed -i
+#    -e 's/{{PROJECT}}/$PROJECT_ID/g'
+#    -e 's/{{PLATFORM_PROJECT}}/$_PLATFORM_PROJECT/'
+#    -e 's/{{REDIS_ADDRESS}}/$_REDIS_ADDRESS/'
+#    app.yaml
+#  - gcloud --project $PROJECT_ID app deploy --no-promote app.yaml
+#  # After deploying the new service, deploy the openapi spec.
+#  - sed -i -e 's/{{PROJECT}}/$PROJECT_ID/' openapi.yaml
+#  - gcloud endpoints services deploy openapi.yaml
