Add variable to configuration

--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -29,6 +29,7 @@ steps:
     -e 's/{{PROJECT}}/$PROJECT_ID/g'
     -e 's/{{PLATFORM_PROJECT}}/$_PLATFORM_PROJECT/'
     -e 's/{{REDIS_ADDRESS}}/$_REDIS_ADDRESS/'
+    -e 's/{{LIMITS}}/$_LIMITS/'
     app.yaml
   - gcloud --project $PROJECT_ID app deploy --promote app.yaml
   # After deploying the new service, deploy the openapi spec.
@@ -47,6 +48,7 @@ steps:
     -e 's/{{PROJECT}}/$PROJECT_ID/g'
     -e 's/{{PLATFORM_PROJECT}}/$_PLATFORM_PROJECT/'
     -e 's/{{REDIS_ADDRESS}}/$_REDIS_ADDRESS/'
+    -e 's/{{LIMITS}}/$_LIMITS/'
     app.yaml
   - gcloud --project $PROJECT_ID app deploy --promote app.yaml
   # After deploying the new service, deploy the openapi spec.
