--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,4 @@ after_success:
 # Note: Do this in the after_success stage so that
 # a broken coveralls won't cause the build to fail.
 # (details: https://github.com/lemurheavy/coveralls-public/issues/1264)
-- $GOPATH/bin/goveralls -service=travis-ci -coverprofile=_c.cov
+- $GOPATH/bin/goveralls -service=travis-pro -coverprofile=_c.cov
