--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,8 @@ services:
         image: redis:7.0.2-alpine
         ports:
             - '6379:6379'
-        command: redis-server
+        # Disable persistence. All state is only in RAM.
+        command: redis-server --save ""
         restart: always
 
     locate:
