--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
-dist: focal
+dist: jammy
 
 language: go
-go:
-- 1.20
+go: go1.20.14
 
 addons:
   apt:
@@ -11,13 +10,13 @@ addons:
     - ca-certificates
 
 install:
-- go install -v ./...
-- go install github.com/mattn/goveralls@latest
+- go1.20.14 install -v ./...
+- go1.20.14 install github.com/mattn/goveralls@latest
 
 script:
-- go vet ./...
-- go test ./... -cover=1 -coverprofile=_c.cov
-- go test ./... -race
+- go1.20.14 vet ./...
+- go1.20.14 test -timeout 5m -p 1 ./... -cover=1 -coverprofile=_c.cov
+- go1.20.14 test -timeout 5m ./... -race
 
 after_success:
 # Note: Do this in the after_success stage so that
