--- a/cloudbuild/app.yaml.template
+++ b/cloudbuild/app.yaml.template
@@ -37,5 +37,7 @@ env_variables:
   MAXMIND_URL: gs://downloader-{{PLATFORM_PROJECT}}/Maxmind/current/GeoLite2-City.tar.gz
   REDIS_ADDRESS: {{REDIS_ADDRESS}}
   RATE_LIMIT_REDIS_ADDRESS: {{RATE_LIMIT_REDIS_ADDRESS}}
+  RATE_LIMIT_INTERVAL: {{RATE_LIMIT_INTERVAL}}
+  RATE_LIMIT_MAX: {{RATE_LIMIT_MAX}}
   PROMETHEUSX_LISTEN_ADDRESS: ':9090' # Must match one of the forwarded_ports above.
   PROMETHEUS_URL: 'https://prometheus-basicauth.{{PLATFORM_PROJECT}}.measurementlab.net/'
