--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -7,7 +7,7 @@ options:
 
 steps:
   # Run unit tests for environment.
-  - name: gcr.io/$PROJECT_ID/golang-cbif:1.20
+  - name: us-central1-docker.pkg.dev/$PROJECT_ID/build-images/golang-cbif:1.20
     env:
       - GONOPROXY=github.com/m-lab/go/*
     args:
@@ -18,7 +18,7 @@ steps:
       - go test -v ./...
 
   # Deployment of APIs in sandbox & staging.
-  - name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif:1.1
+  - name: us-central1-docker.pkg.dev/$PROJECT_ID/build-images/gcloud-jsonnet-cbif:1.1
     env:
       # Use cbif condition: only run these steps in one of these projects.
       - PROJECT_IN=mlab-sandbox,mlab-staging
@@ -39,7 +39,7 @@ steps:
       - gcloud endpoints services deploy openapi.yaml
 
   # Deployment of APIs in mlab-ns.
-  - name: gcr.io/$PROJECT_ID/gcloud-jsonnet-cbif:1.1
+  - name: us-central1-docker.pkg.dev/$PROJECT_ID/build-images/gcloud-jsonnet-cbif:1.1
     env:
       # Use cbif condition: only run these steps in this project.
       - PROJECT_IN=mlab-ns
