Update cloudbuild config to allow setting IP-based config from env

--- a/cloudbuild/app.yaml.mlab-ns.template
+++ b/cloudbuild/app.yaml.mlab-ns.template
@@ -40,5 +40,7 @@ env_variables:
   RATE_LIMIT_REDIS_ADDRESS: {{RATE_LIMIT_REDIS_ADDRESS}}
   RATE_LIMIT_INTERVAL: {{RATE_LIMIT_INTERVAL}}
   RATE_LIMIT_MAX: {{RATE_LIMIT_MAX}}
+  RATE_LIMIT_IP_INTERVAL: {{RATE_LIMIT_IP_INTERVAL}}
+  RATE_LIMIT_IP_MAX: {{RATE_LIMIT_IP_MAX}}
   PROMETHEUSX_LISTEN_ADDRESS: ':9090' # Must match one of the forwarded_ports above.
   PROMETHEUS_URL: 'https://prometheus-basicauth.{{PLATFORM_PROJECT}}.measurementlab.net/'
